--- a/app/components/snippets/index.html
+++ b/app/components/snippets/index.html
@@ -9,23 +9,29 @@
 </head>
 
 <body>
-	<div id="app">Hi Node</div>
-	<div className="c-user-form">
+	<div class="main-body">
+		<h1>Employee List</h1>
+	<div class="c-user-form">
 		<h3>Add New User</h3>
 		<form method="POST" id="addSnippetform">
-			<div className="form-group">
+			<div class="form-group">
 				<label for="exampleInputEmail1">User Name</label>
-				<input type="userName" name="userName" className="form-control" id="exampleInputEmail1" placeholder="User Name" required/>
+				<input type="text" name="userName" class="form-control" id="userName" placeholder="User Name" required/>
 			</div>
-			<div className="form-group">
-				<label for="exampleInputPassword1">Email</label>
-				<input type="text" name="email" className="form-control" id="exampleInputPassword1" placeholder="Password" required/>
+			<div class="form-group">
+				<label for="userEmail">Email</label>
+				<input type="email" name="userEmail" class="form-control" id="userEmail" placeholder="Email Address" required/>
 			</div>
-			<button type="submit" className="btn btn-default" id="submit">Submit</button>
+			<div class="form-group">
+				<label for="userPhone">Contact Number</label>
+				<input type="tel" name="userPhone" class="form-control" id="userPhone" placeholder="Password" required/>
+			</div>
+			<button type="submit" class="btn btn-default" id="submit">Submit</button>
 		</form>
 	</div>
 	<div id="sample-data">
 
+	</div>
 	</div>
 
 	<script src="app/assets/build/scripts/script.js"></script>
@@ -69,7 +75,8 @@
 						// there are many ways to get this data using jQuery (you can use the class or id also)
 						var formData = {
 							'name': $('input[name=userName]').val(),
-							'email': $('input[name=email]').val(),
+							'email': $('input[name=userEmail]').val(),
+							'phone': $('input[name=userPhone]').val(),
 							'dateCreated': new Date().getTime()
 						};
 
@@ -140,6 +147,7 @@
 				<h3>User Name : {{name}}</h3>
 				<div class="body">
 				<strong>Email : </strong>{{email}}
+				<strong>Phone : </strong>{{phone}}
 				<a href="javascript:;" class="view-detail" data-user-id="{{_id}}">View Detail</a>
 				<a href="javascript:;" class="delete-user" data-user-id="{{_id}}">Delete</a>
 				</div>
