--- a/app/components/users/index.html
+++ b/app/components/users/index.html
@@ -21,10 +21,10 @@
 			<h1>Employee List</h1>
 
 			<div class="c-user-form">
-				<h3>Add New User</h3>				
+				<h3>Create User</h3>				
 				<form method="POST" id="addSnippetform">
 					<div class="form-group">
-						<label for="exampleInputEmail1">User Name</label>
+						<label for="userName">User Name</label>
 						<input type="text" name="userName" class="form-control" id="userName" placeholder="User Name" required/>
 					</div>
 					<div class="form-group">
@@ -33,9 +33,13 @@
 					</div>
 					<div class="form-group">
 						<label for="userPhone">Contact Number</label>
-						<input type="tel" name="userPhone" class="form-control" id="userPhone" placeholder="Password" required/>
+						<input type="tel" name="userPhone" class="form-control" id="userPhone" placeholder="Contact Number" required/>
 					</div>
-					<button type="submit" class="btn btn-small btn-primary" id="submit">Save</button>
+					<div class="form-group">
+						<label for="userPassword">Contact Number</label>
+						<input type="password" name="userPassword" class="form-control" id="userPassword" placeholder="Password" required/>
+					</div>
+					<button type="submit" class="btn btn-small btn-primary" id="submit">Create User</button>
 				</form>
 			</div>
 			<div id="sample-data">
