--- a/app/components/users/users.html
+++ b/app/components/users/users.html
@@ -37,8 +37,11 @@
 			<a href="/logout" class="btn btn-small tr">Logout</a>
 		</div>
 	</header>
-
-	<div class="main-body"><i class="icon ion-trash-a"></i>
+<form enctype="multipart/form-data" action="/users/upload" method="POST" id="formUploadAvatar">
+  <input type="file" name="upload_avatar" />
+  <input type="submit" value="Upload Image" name="submit" />
+</form>
+	<div class="main-body">
 		<div id="sample-data">
 
 		</div>
@@ -53,7 +56,7 @@
 			{{#each users}}
 			<li class="c-user-list__item c-flex-container">
 				<div class="c-flex-container__item tc" style="width: 10%;">
-					<a href="javascript:;" class="c-user-image"></a>
+					<a href="javascript:;" class="c-user-image"><img src="app/assets/images/avatar-1.jpg"/></a>
 				</div>
 				<div class="c-flex-container__item" style="width: 70%;">
 					<h3 class="c-user-list__item__name">{{name}}</h3>
@@ -63,8 +66,8 @@
 					<strong>E: </strong>{{email}}
 				</div>
 				<div class="c-flex-container__item" style="width: 20%;">
-					<a href="/users/{{id}}" class="[ btn btn-small btn-primary ] view-detail" data-user-id="{{id}}">View Detail</a>
-					<a href="javascript:;" class="[ btn btn-small btn-primary ] delete-user" data-user-id="{{id}}"><i class="icon ion-trash-a"></i> Delete</a>
+					<a href="/users/{{id}}" class="[ btn btn-small btn-primary ] view-detail" data-user-id="{{id}}"><i class="icon ion-eye"></i></a>
+					<a href="javascript:;" class="[ btn btn-small btn-primary ] delete-user" data-user-id="{{id}}"><i class="icon ion-trash-a"></i></a>
 				</div>
 			</li>
 			{{/each}}
